--- a/app/views/shoppers/_form.html.erb
+++ b/app/views/shoppers/_form.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_field :department %>
   </div>
 
+  <div class="field">
+    <%= f.label :nord_shopper_id %>
+    <%= f.text_field :nord_shopper_id %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
